--- a/Rotfrukt_hemsida/site/public/css/main.css
+++ b/Rotfrukt_hemsida/site/public/css/main.css
@@ -31,13 +31,13 @@ main {
 
 .meny {
   grid-row: 1/2;
-  grid-column: 5/6; }
-
-.menyknapp {
+  grid-column: 5/6;
   margin-top: 17px;
   margin-bottom: 10px;
   margin-right: 10px;
-  margin-left: 15px;
+  margin-left: 15px; }
+
+.menyknapp {
   display: inline-block;
   cursor: pointer; }
 
@@ -60,7 +60,8 @@ main {
   transform: rotate(45deg) translate(-8px, -8px); }
 
 .menu p {
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 15px; }
 
 .menu {
   display: none;
@@ -68,10 +69,103 @@ main {
   grid-column: 5/6;
   background: white;
   border-style: solid;
-  border-color: grey;
+  border-color: #5e5959;
   border-width: 2px;
   margin-bottom: 30px;
-  position: absolute; }
+  z-index: +1; }
 
 .show {
   display: block; }
+
+.artiklar {
+  grid-row: 1/8;
+  grid-column: 1/3;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  display: grid;
+  margin-left: 5px;
+  margin-right: -24px;
+  grid-row-gap: 15px; }
+
+.artiklar h2 {
+  grid-row: 1/2;
+  grid-column: 1/3;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin-top: 40px;
+  margin-bottom: 0px; }
+
+.artikel1 {
+  grid-row: 2/3;
+  grid-column: 1/3;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  display: grid;
+  border-style: solid;
+  border-color: gray;
+  border-width: 2px; }
+
+.artikel2 {
+  grid-row: 3/4;
+  grid-column: 1/3;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  display: grid;
+  border-style: solid;
+  border-color: gray;
+  border-width: 2px; }
+
+.artikel3 {
+  grid-row: 4/5;
+  grid-column: 1/3;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  display: grid;
+  border-style: solid;
+  border-color: gray;
+  border-width: 2px; }
+
+.artikel4 {
+  grid-row: 5/6;
+  grid-column: 1/3;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  display: grid;
+  border-style: solid;
+  border-color: gray;
+  border-width: 2px; }
+
+.artiklar p {
+  font-size: 14px;
+  grid-column: 2/3;
+  font-weight: bold;
+  text-align: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+
+.rotfruktslista {
+  grid-row: 1/8;
+  grid-column: 4/6;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  display: grid;
+  margin-right: 5px;
+  margin-left: -24px;
+  margin-top: 20px;
+  border-style: solid;
+  border-color: gray;
+  border-width: 2px;
+  background-color: rgba(212, 212, 212, 0.603); }
+
+.rotfruktslista h2 {
+  grid-row: 1/2;
+  grid-column: 1/3;
+  margin: 0px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+
+.rotfruktslista ul {
+  grid-row: 2/7;
+  grid-column: 1/3;
+  margin-top: -15px; }
+
+.rotfruktslista li {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  margin-bottom: 5px; }
