--- a/Rotfrukt_hemsida/site/css/_index.css.scss
+++ b/Rotfrukt_hemsida/site/css/_index.css.scss
@@ -14,7 +14,7 @@
     grid-row: 1/2;
     grid-column: 1/3;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-top: 40px;
+    margin-top: 60px;
     margin-bottom: 0px;
 }
 
@@ -29,6 +29,12 @@
     border-width: 2px;
 }
 
+.bild1{
+    grid-row: 1/2;
+    grid-column: 1/2;
+    background-image: url(../img/potatisbov.jpg)
+}
+
 .artikel2{
     grid-row: 3/4;
     grid-column: 1/3;
@@ -38,6 +44,12 @@
     border-style: solid;
     border-color: gray;
     border-width: 2px;
+}
+
+.bild2{
+    grid-row: 1/2;
+    grid-column: 1/2;
+    background-image: url(../img/morot.jpg)
 }
 
 .artikel3{
@@ -70,6 +82,7 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+// LISTA
 .rotfruktslista{
     grid-row: 1/8;
     grid-column: 4/6;
