--- a/Rotfrukt_hemsida/site/public/css/main.css
+++ b/Rotfrukt_hemsida/site/public/css/main.css
@@ -91,7 +91,7 @@ main {
   grid-row: 1/2;
   grid-column: 1/3;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  margin-top: 40px;
+  margin-top: 60px;
   margin-bottom: 0px; }
 
 .artikel1 {
@@ -104,6 +104,11 @@ main {
   border-color: gray;
   border-width: 2px; }
 
+.bild1 {
+  grid-row: 1/2;
+  grid-column: 1/2;
+  background-image: url(../img/potatisbov.jpg); }
+
 .artikel2 {
   grid-row: 3/4;
   grid-column: 1/3;
@@ -113,6 +118,11 @@ main {
   border-style: solid;
   border-color: gray;
   border-width: 2px; }
+
+.bild2 {
+  grid-row: 1/2;
+  grid-column: 1/2;
+  background-image: url(../img/morot.jpg); }
 
 .artikel3 {
   grid-row: 4/5;
