--- a/Rotfrukt_hemsida/site/public/css/main.css
+++ b/Rotfrukt_hemsida/site/public/css/main.css
@@ -134,6 +134,11 @@ main {
   border-color: gray;
   border-width: 2px; }
 
+.bild3 {
+  grid-row: 1/2;
+  grid-column: 1/2;
+  background-image: url(../img/sotpotatis.jpg); }
+
 .artikel4 {
   grid-row: 5/6;
   grid-column: 1/3;
