--- a/Rotfrukt_hemsida/site/css/_index.css.scss
+++ b/Rotfrukt_hemsida/site/css/_index.css.scss
@@ -80,6 +80,12 @@
     border-width: 2px;
 }
 
+.bild4{
+    grid-row: 1/2;
+    grid-column: 1/2;
+    background-image: url(../img/rodbeta_ny_radisa.jpg)
+}
+
 .artiklar p{
     font-size: 14px;
     grid-column: 2/3;
@@ -107,7 +113,10 @@
 .rotfruktslista h2{
     grid-row: 1/2;
     grid-column: 1/3;
-    margin: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: 0px;
+    margin-left: 5px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
