--- a/Rotfrukt_hemsida/site/public/css/main.css
+++ b/Rotfrukt_hemsida/site/public/css/main.css
@@ -149,6 +149,11 @@ main {
   border-color: gray;
   border-width: 2px; }
 
+.bild4 {
+  grid-row: 1/2;
+  grid-column: 1/2;
+  background-image: url(../img/rodbeta_ny_radisa.jpg); }
+
 .artiklar p {
   font-size: 14px;
   grid-column: 2/3;
@@ -173,7 +178,10 @@ main {
 .rotfruktslista h2 {
   grid-row: 1/2;
   grid-column: 1/3;
-  margin: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-right: 0px;
+  margin-left: 5px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
 
 .rotfruktslista ul {
