Håller på att fixa med desktop versionen av index-sidan

--- a/Rotfrukt_hemsida/site/index.html.erb
+++ b/Rotfrukt_hemsida/site/index.html.erb
@@ -32,24 +32,34 @@
     
     <h2>Lista på rotfrukter:</h2>
 
-    <ul>
-        <li>Kålrabbi</li>
-        <li>Kålrot</li>
-        <li>Majrova</li>
-        <li>Morot</li>
-        <li>Palsternacka</li>
-        <li>Potatis</li>
-        <li>Rotselleri</li>
-        <li>Rädisa</li>
-        <li>Rättika</li>
-        <li>Rödbeta</li>
-        <li>Sockerbeta</li>
-        <li>Svartrot</li>
-        <li>Sötpotatis</li>
-        <li>Persiljerot</li>
-        <li>Pepparrot</li>
-        <li>Jordärtskocka</li>
-        <li>Knölkrasserot</li>
-    </ul>
+    <div class="lists">
+        
+        <div class="list1">
+            <ul>
+                <li>Kålrabbi</li>
+                <li>Kålrot</li>
+                <li>Majrova</li>
+                <li>Morot</li>
+                <li>Palsternacka</li>
+                <li>Potatis</li>
+                <li>Rotselleri</li>
+                <li>Rädisa</li>
+                <li>Rättika</li>
+            </ul>
+        </div>
+        
+       <div class="list2">
+        <ul>
+            <li>Rödbeta</li>
+            <li>Sockerbeta</li>
+            <li>Svartrot</li>
+            <li>Sötpotatis</li>
+            <li>Persiljerot</li>
+            <li>Pepparrot</li>
+            <li>Jordärtskocka</li>
+            <li>Knölkrasserot</li>
+        </ul>
+       </div>
+    </div>
 
 </div>
