--- a/Rotfrukt_hemsida/site/css/_index.css.scss
+++ b/Rotfrukt_hemsida/site/css/_index.css.scss
@@ -120,13 +120,49 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.rotfruktslista ul{
+.rotfruktslista .lists{
     grid-row: 2/7;
     grid-column: 1/3;
+    margin-top: -15px;
+}
+
+.rotfruktslista .list1{
+    margin-top: -15px;
+}
+
+.rotfruktslista .list2{
     margin-top: -15px;
 }
 
 .rotfruktslista li{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin-bottom: 5px;
+}
+
+
+@media only screen and (min-device-width: 900px){
+
+    // LISTA
+    .rotfruktslista{
+        grid-row: 2/4;
+        grid-column: 4/12;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+        margin: 0px;
+    }
+
+    .rotfruktslista .lists{
+        grid-row: 2/7;
+        grid-column: 1/3;
+    }
+
+    .rotfruktslista .list1{
+        grid-column: 1/2;
+    }
+    
+    .rotfruktslista .list2{
+        grid-column: 2/3;
+    }
+
+
 }
