--- a/Rotfrukt_hemsida/site/css/_layout.css.scss
+++ b/Rotfrukt_hemsida/site/css/_layout.css.scss
@@ -9,7 +9,7 @@ body{
     height: 568px;
     display: grid;
     grid-template-rows: repeat(8,1fr);
-    grid-template-columns: repeat(5,1fr)
+    grid-template-columns: repeat(5,1fr);
 }
 
 
@@ -19,7 +19,7 @@ header{
     grid-column: 1/6;
     grid-template-rows: repeat(1,1fr);
     grid-template-columns: repeat(5,1fr);
-    background-color: rgb(94, 89, 89)
+    background-color: rgb(94, 89, 89);
 }
 
 main{
@@ -27,13 +27,13 @@ main{
     grid-row: 2/9;
     grid-column: 1/6;
     grid-template-rows: repeat(7,1fr);
-    grid-template-columns: repeat(5,1fr)
+    grid-template-columns: repeat(5,1fr);
 }
 
 .logo{
     grid-row: 1/2;
     grid-column: 2/5;
-    background-image: url(../img/potatis.jpg)
+    background-image: url(../img/potatis.jpg);
 }
 
 // MENYN
@@ -86,10 +86,89 @@ main{
     border-style: solid;
     border-color: rgb(94, 89, 89);
     border-width: 2px;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
     z-index: +1;
 }
 
 .show{
     display: block;
+}
+
+header .info{
+    display: none;
+}
+
+
+@media only screen and (min-device-width: 900px){
+
+    // INDEX
+    .container{
+        width: 1200px;
+        height: 900px;
+        margin: auto;
+        grid-template-rows: repeat(9,1fr);
+        grid-template-columns: repeat(14,1fr);
+    }
+
+    header{
+        grid-row: 1/2;
+        grid-column: 1/15;
+        grid-template-rows: repeat(1,1fr);
+        grid-template-columns: repeat(14,1fr);
+    }
+
+    main{
+        grid-row: 2/10;
+        grid-column: 1/15;
+        grid-template-rows: repeat(8,1fr);
+        grid-template-columns: repeat(14,1fr);
+    }
+
+    .logo{
+        grid-row: 1/2;
+        grid-column: 1/5;
+        margin-left: 10px;
+        background-image: url(../img/potatis.jpg);
+    }
+
+    // MENYN
+    .meny{
+        display: none;
+    }
+
+    header .info{
+        display: block;
+        display: grid;
+        grid-column: 11/15;
+        grid-template-columns: repeat(3,1fr)
+    }
+
+    header .info p1{
+        grid-column: 1/2;
+        color: white;
+        text-decoration: underline;
+        font-size: 20px;
+        margin-top: 60px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+
+    header .info p2{
+        grid-column: 2/3;
+        margin-left: 20px;
+        margin-top: 60px;
+        color: white;
+        text-decoration: underline;
+        font-size: 20px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+
+    header .info p3{
+        grid-column: 3/4;
+        color: white;
+        text-decoration: underline;
+        font-size: 20px;
+        margin-top: 60px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+
 }
