--- a/Rotfrukt_hemsida/site/layout.html.erb
+++ b/Rotfrukt_hemsida/site/layout.html.erb
@@ -25,6 +25,13 @@
                 x.classList.toggle("change");
                 }
             </script>
+
+            <div class="info">
+                <p1>Kontakta oss</p1>
+                <p2>Om oss</p2>
+                <p3>Stöd oss</p3>
+            </div>
+
         </header>
         
         <main>
@@ -35,6 +42,8 @@
                     <p>Kontakta Oss</p>
                     <p></p>
                     <p>Om Oss</p>
+                    <p></p>
+                    <p>Stöd oss</p>
                 </nav>
             </div>
             <script src="js/menu.js"></script>
