--- a/Rotfrukt_hemsida/site/public/css/main.css
+++ b/Rotfrukt_hemsida/site/public/css/main.css
@@ -71,12 +71,74 @@ main {
   border-style: solid;
   border-color: #5e5959;
   border-width: 2px;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   z-index: +1; }
 
 .show {
   display: block; }
 
+header .info {
+  display: none; }
+
+@media only screen and (min-device-width: 900px) {
+  .container {
+    width: 1200px;
+    height: 900px;
+    margin: auto;
+    grid-template-rows: repeat(9, 1fr);
+    grid-template-columns: repeat(14, 1fr); }
+
+  header {
+    grid-row: 1/2;
+    grid-column: 1/15;
+    grid-template-rows: repeat(1, 1fr);
+    grid-template-columns: repeat(14, 1fr); }
+
+  main {
+    grid-row: 2/10;
+    grid-column: 1/15;
+    grid-template-rows: repeat(8, 1fr);
+    grid-template-columns: repeat(14, 1fr); }
+
+  .logo {
+    grid-row: 1/2;
+    grid-column: 1/5;
+    margin-left: 10px;
+    background-image: url(../img/potatis.jpg); }
+
+  .meny {
+    display: none; }
+
+  header .info {
+    display: block;
+    display: grid;
+    grid-column: 11/15;
+    grid-template-columns: repeat(3, 1fr); }
+
+  header .info p1 {
+    grid-column: 1/2;
+    color: white;
+    text-decoration: underline;
+    font-size: 20px;
+    margin-top: 60px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+
+  header .info p2 {
+    grid-column: 2/3;
+    margin-left: 20px;
+    margin-top: 60px;
+    color: white;
+    text-decoration: underline;
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+
+  header .info p3 {
+    grid-column: 3/4;
+    color: white;
+    text-decoration: underline;
+    font-size: 20px;
+    margin-top: 60px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; } }
 .artiklar {
   grid-row: 1/8;
   grid-column: 1/3;
@@ -184,11 +246,35 @@ main {
   margin-left: 5px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
 
-.rotfruktslista ul {
+.rotfruktslista .lists {
   grid-row: 2/7;
   grid-column: 1/3;
+  margin-top: -15px; }
+
+.rotfruktslista .list1 {
+  margin-top: -15px; }
+
+.rotfruktslista .list2 {
   margin-top: -15px; }
 
 .rotfruktslista li {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   margin-bottom: 5px; }
+
+@media only screen and (min-device-width: 900px) {
+  .rotfruktslista {
+    grid-row: 2/4;
+    grid-column: 4/12;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    margin: 0px; }
+
+  .rotfruktslista .lists {
+    grid-row: 2/7;
+    grid-column: 1/3; }
+
+  .rotfruktslista .list1 {
+    grid-column: 1/2; }
+
+  .rotfruktslista .list2 {
+    grid-column: 2/3; } }
