--- a/Rotfrukt_hemsida/site/css/_layout.css.scss
+++ b/Rotfrukt_hemsida/site/css/_layout.css.scss
@@ -122,6 +122,7 @@ header .info{
         grid-column: 1/15;
         grid-template-rows: repeat(8,1fr);
         grid-template-columns: repeat(14,1fr);
+        background-image: url(../img/lantbruk.jpg)
     }
 
     .logo{
