--- a/Rotfrukt_hemsida/site/css/_index.css.scss
+++ b/Rotfrukt_hemsida/site/css/_index.css.scss
@@ -98,6 +98,10 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.artiklar p2{
+    display: none;
+}
+
 // LISTA
 .rotfruktslista{
     grid-row: 1/8;
@@ -143,6 +147,11 @@
     margin-bottom: 5px;
 }
 
+.rotfruktslista a{
+    text-decoration: none;
+    color: black;
+}
+
 
 @media only screen and (min-device-width: 900px){
 
@@ -184,6 +193,7 @@
         margin-left: 20px;
     }
 
+    // ARTIKLAR
     .artiklar{
         grid-row: 5/8;
         grid-column: 2/14;
@@ -194,8 +204,28 @@
         margin: 0px;
     }
 
+    .artiklar p{
+        margin-left: 0px;
+        margin-right: 0px;
+        margin-bottom: 0px;
+        margin-top: 15px;
+    }
+
+    .artiklar p2{
+        grid-row: 2/3;
+        font-size: 12px;
+        color: rgb(100, 100, 100);
+        margin-right: 5px;
+        margin-left: 5px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        display: block;
+    }
+
     .artiklar h2{
-        margin: 0px;
+        margin-left: 0px;
+        margin-right: 0px;
+        margin-bottom: 0px;
+        margin-top: 10px;
         grid-row: 3/4;
         grid-column: 1/2;
         z-index: +1;
@@ -205,30 +235,56 @@
         grid-row: 3/8;
         grid-column: 1/5;
         background-color: rgba(255, 255, 255, 0.712);
+        margin-left: -20px;
+        margin-right: -20px;
     }
 
     .artikel1{
+        grid-template-rows: repeat(2, 1fr);
         grid-column: 1/2;
         grid-row: 4/7;
         z-index: +1;
     }
 
     .artikel2{
+        grid-template-rows: repeat(2, 1fr);
         grid-column: 2/3;
         grid-row: 4/7;
         z-index: +1;
     }
 
     .artikel3{
+        grid-template-rows: repeat(2, 1fr);
         grid-column: 3/4;
         grid-row: 4/7;
         z-index: +1;
     }
 
     .artikel4{
+        grid-template-rows: repeat(2, 1fr);
         grid-column: 4/5;
         grid-row: 4/7;
         z-index: +1;
+    }
+
+    .bild1{
+        grid-row: 1/3;  
+        background-image: url(../img/potatisbov_desktop.jpg)
+    }
+
+    .bild2{
+        grid-row: 1/3; 
+        background-image: url(../img/morot_desktop.jpg)
+    }
+
+    .bild3{
+        grid-row: 1/3; 
+        background-image: url(../img/sotpotatis_desktop.jpg)
+    }
+
+    .bild4{
+        grid-row: 1/3; 
+        background-image: url(../img/rodbeta_ny_radisa_desktop.jpg)
     }
 
 
