--- a/Rotfrukt_hemsida/site/index.html.erb
+++ b/Rotfrukt_hemsida/site/index.html.erb
@@ -8,24 +8,28 @@
     <div class="artikel1">
         <div class="bild1"></div>
         <p>Potatisen en miljöbov?</p>
+        <p2>blalaskldklak fjksdl fkl sjfkjssdj fsfkl sdfsdfsfs sdfsdf fsfsd wewg hthyj jrewd sdfhjh</p2>
     </div>
 
     
     <div class="artikel2">
         <div class="bild2"></div>
         <p>Ny morots-medicin!</p>
+        <p2>blalaskldklak fjksdl fkl sjfkjssdj fsfkl sdfsdfsfs sdfsdf fsfsd wewg hthyj jrewd sdfhjh</p2>
     </div>
 
     
     <div class="artikel3">
         <div class="bild3"></div>
         <p>Är sötpotatis onyttigt?</p>
+        <p2>blalaskldklak fjksdl fkl sjfkjssdj fsfkl sdfsdfsfs sdfsdf fsfsd wewg hthyj jrewd sdfhjh</p2>
     </div>
     
     
     <div class="artikel4">
         <div class="bild4"></div>
         <p>Rödbetan den nya rädisan.</p>
+        <p2>blalaskldklak fjksdl fkl sjfkjssdj fsfkl sdfsdfsfs sdfsdf fsfsd wewg hthyj jrewd sdfhjh</p2>
     </div>
 
 </div>
@@ -43,7 +47,7 @@
                 <li>Majrova</li>
                 <li>Morot</li>
                 <li>Palsternacka</li>
-                <li>Potatis</li>
+                <li><a href="info.html">Potatis</a></li>
                 <li>Rotselleri</li>
                 <li>Rädisa</li>
                 <li>Rättika</li>
