--- a/Rotfrukt_hemsida/site/layout.html.erb
+++ b/Rotfrukt_hemsida/site/layout.html.erb
@@ -10,7 +10,9 @@
     <div class="container">
     
         <header>
-            <div class="logo"></div>
+            <div class="logo">
+                <a href="index.html"></a>
+            </div>
 
             <div class="meny" onclick="toggleMenu()">
                 <div class="menyknapp" onclick="myFunction(this)">
