--- a/Rotfrukt_hemsida/site/public/css/main.css
+++ b/Rotfrukt_hemsida/site/public/css/main.css
@@ -27,7 +27,10 @@ main {
 .logo {
   grid-row: 1/2;
   grid-column: 2/5;
-  background-image: url(../img/potatis.jpg); }
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  display: grid;
+  background-image: url(../img/logo.jpg); }
 
 .meny {
   grid-row: 1/2;
@@ -103,9 +106,10 @@ header .info {
 
   .logo {
     grid-row: 1/2;
-    grid-column: 1/5;
-    margin-left: 10px;
-    background-image: url(../img/potatis.jpg); }
+    grid-column: 1/6;
+    margin-left: 40px;
+    margin-right: 47px;
+    background-image: url(../img/logo_desktop.jpg); }
 
   .meny {
     display: none; }
@@ -228,6 +232,9 @@ header .info {
   text-align: center;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
 
+.artiklar p2 {
+  display: none; }
+
 .rotfruktslista {
   grid-row: 1/8;
   grid-column: 4/6;
@@ -265,6 +272,10 @@ header .info {
 .rotfruktslista li {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   margin-bottom: 5px; }
+
+.rotfruktslista a {
+  text-decoration: none;
+  color: black; }
 
 @media only screen and (min-device-width: 900px) {
   .rotfruktslista {
@@ -308,8 +319,26 @@ header .info {
     grid-column-gap: 15px;
     margin: 0px; }
 
+  .artiklar p {
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    margin-top: 15px; }
+
+  .artiklar p2 {
+    grid-row: 2/3;
+    font-size: 12px;
+    color: #646464;
+    margin-right: 5px;
+    margin-left: 5px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: block; }
+
   .artiklar h2 {
-    margin: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    margin-top: 10px;
     grid-row: 3/4;
     grid-column: 1/2;
     z-index: +1; }
@@ -317,24 +346,91 @@ header .info {
   .background {
     grid-row: 3/8;
     grid-column: 1/5;
-    background-color: rgba(255, 255, 255, 0.712); }
+    background-color: rgba(255, 255, 255, 0.712);
+    margin-left: -20px;
+    margin-right: -20px; }
 
   .artikel1 {
+    grid-template-rows: repeat(2, 1fr);
     grid-column: 1/2;
     grid-row: 4/7;
     z-index: +1; }
 
   .artikel2 {
+    grid-template-rows: repeat(2, 1fr);
     grid-column: 2/3;
     grid-row: 4/7;
     z-index: +1; }
 
   .artikel3 {
+    grid-template-rows: repeat(2, 1fr);
     grid-column: 3/4;
     grid-row: 4/7;
     z-index: +1; }
 
   .artikel4 {
+    grid-template-rows: repeat(2, 1fr);
     grid-column: 4/5;
     grid-row: 4/7;
-    z-index: +1; } }
+    z-index: +1; }
+
+  .bild1 {
+    grid-row: 1/3;
+    background-image: url(../img/potatisbov_desktop.jpg); }
+
+  .bild2 {
+    grid-row: 1/3;
+    background-image: url(../img/morot_desktop.jpg); }
+
+  .bild3 {
+    grid-row: 1/3;
+    background-image: url(../img/sotpotatis_desktop.jpg); }
+
+  .bild4 {
+    grid-row: 1/3;
+    background-image: url(../img/rodbeta_ny_radisa_desktop.jpg); } }
+.titel {
+  grid-row: 1/2;
+  grid-column: 1/6;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  display: grid;
+  margin-bottom: -15px; }
+
+.titel h2 {
+  grid-column: 1/6;
+  text-align: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 40px;
+  margin: 0px;
+  padding-top: 15px; }
+
+.navigation {
+  grid-row: 2/3;
+  grid-column: 1/6;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  display: grid;
+  background-color: gray;
+  margin-bottom: 15px;
+  margin-top: 15px; }
+
+.navigation .info {
+  margin-top: 10px;
+  grid-column: 2/3;
+  text-align: center; }
+
+.navigation .recept {
+  margin-top: 10px;
+  grid-column: 3/4;
+  text-align: center; }
+
+.navigation .odlingstips {
+  margin-top: 10px;
+  grid-column: 4/5;
+  text-align: center; }
+
+.navigation a {
+  font-size: 20px;
+  color: white;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
