--- a/Rotfrukt_hemsida/site/css/_info.css.scss
+++ b/Rotfrukt_hemsida/site/css/_info.css.scss
@@ -5,6 +5,7 @@
     grid-template-rows: repeat(1, 1fr);
     display: grid;
     margin-bottom: -15px;
+    background-image: url(../img/bunch_o_potatoes.jpg);
 }
 
 .titel h2{
@@ -14,6 +15,7 @@
     font-size: 40px;
     margin: 0px;
     padding-top: 15px;
+    text-shadow:  2px 2px 1px white;
 }
 
 .navigation{
@@ -22,7 +24,7 @@
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(1, 1fr);
     display: grid;
-    background-color: gray;
+    background-color: rgb(94, 89, 89);
     margin-bottom: 15px;
     margin-top: 15px;
 }
@@ -49,4 +51,38 @@
     font-size: 20px;
     color: white;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.text{
+    grid-column: 1/4;
+    grid-row: 3/8;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.text p{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.bilder{
+    grid-column: 4/6;
+    grid-row: 3/8;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    display: grid;
+    grid-row-gap: 10px;
+}
+
+.potatis{
+    grid-row: 1/3;
+    background-image: url(../img/potato.jpg);
+    border: solid grey 2px;
+    margin-right: 10px;
+}
+
+.potatisplanta{
+    grid-row: 3/5;
+    background-image: url(../img/potato_plant.jpg);
+    border: solid grey 2px;
+    margin-right: 10px;
 }
