--- a/Rotfrukt_hemsida/site/public/css/main.css
+++ b/Rotfrukt_hemsida/site/public/css/main.css
@@ -395,7 +395,8 @@ header .info {
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(1, 1fr);
   display: grid;
-  margin-bottom: -15px; }
+  margin-bottom: -15px;
+  background-image: url(../img/bunch_o_potatoes.jpg); }
 
 .titel h2 {
   grid-column: 1/6;
@@ -403,7 +404,8 @@ header .info {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 40px;
   margin: 0px;
-  padding-top: 15px; }
+  padding-top: 15px;
+  text-shadow: 2px 2px 1px white; }
 
 .navigation {
   grid-row: 2/3;
@@ -411,7 +413,7 @@ header .info {
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: repeat(1, 1fr);
   display: grid;
-  background-color: gray;
+  background-color: #5e5959;
   margin-bottom: 15px;
   margin-top: 15px; }
 
@@ -434,3 +436,32 @@ header .info {
   font-size: 20px;
   color: white;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
+
+.text {
+  grid-column: 1/4;
+  grid-row: 3/8;
+  margin-left: 10px;
+  margin-right: 10px; }
+
+.text p {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+
+.bilder {
+  grid-column: 4/6;
+  grid-row: 3/8;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  display: grid;
+  grid-row-gap: 10px; }
+
+.potatis {
+  grid-row: 1/3;
+  background-image: url(../img/potato.jpg);
+  border: solid grey 2px;
+  margin-right: 10px; }
+
+.potatisplanta {
+  grid-row: 3/5;
+  background-image: url(../img/potato_plant.jpg);
+  border: solid grey 2px;
+  margin-right: 10px; }
