--- a/Rotfrukt_hemsida/site/css/_info.css.scss
+++ b/Rotfrukt_hemsida/site/css/_info.css.scss
@@ -53,6 +53,10 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+.navigation a:hover{
+    color:black;
+}
+
 .text{
     grid-column: 1/4;
     grid-row: 3/8;
@@ -61,7 +65,7 @@
 }
 
 .text p{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'PT Serif', serif;
 }
 
 .bilder{
