Lade till "Recept" delsidan

--- a/Rotfrukt_hemsida/site/public/css/main.css
+++ b/Rotfrukt_hemsida/site/public/css/main.css
@@ -437,7 +437,7 @@ header .info {
   color: white;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
 
-.navigation a:hover {
+.navigation a:active {
   color: black; }
 
 .text {
@@ -468,3 +468,95 @@ header .info {
   background-image: url(../img/potato_plant.jpg);
   border: solid grey 2px;
   margin-right: 10px; }
+
+.receptlista {
+  grid-row: 3/8;
+  grid-column: 1/6;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  display: grid; }
+
+.receptlista h3 {
+  margin-left: 5px; }
+
+.recept1 {
+  grid-row: 1/2;
+  grid-template-rows: repeat(1, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  display: grid;
+  border: solid 2px grey; }
+
+.recept1:active {
+  background-color: #d6d6d6; }
+
+.recept2 {
+  grid-row: 2/3;
+  grid-template-rows: repeat(1, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  display: grid;
+  border: solid 2px grey; }
+
+.recept2:active {
+  background-color: #d6d6d6; }
+
+.recept3 {
+  grid-row: 3/4;
+  grid-template-rows: repeat(1, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  display: grid;
+  border: solid 2px grey; }
+
+.recept3:active {
+  background-color: #d6d6d6; }
+
+.recept4 {
+  grid-row: 4/5;
+  grid-template-rows: repeat(1, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  display: grid;
+  border: solid 2px grey; }
+
+.recept4:active {
+  background-color: #d6d6d6; }
+
+.recept5 {
+  grid-row: 5/6;
+  grid-template-rows: repeat(1, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+  display: grid;
+  border: solid 2px grey; }
+
+.recept5:active {
+  background-color: #d6d6d6; }
+
+.morotter {
+  grid-column: 2/3;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(5, 1fr);
+  display: grid;
+  margin-right: 5px; }
+
+.morot1 {
+  grid-row: 2/3;
+  grid-column: 5/6;
+  background-image: url(../img/carrot.png); }
+
+.morot2 {
+  grid-row: 2/3;
+  grid-column: 4/5;
+  background-image: url(../img/carrot.png); }
+
+.morot3 {
+  grid-row: 2/3;
+  grid-column: 3/4;
+  background-image: url(../img/carrot.png); }
+
+.morot4 {
+  grid-row: 2/3;
+  grid-column: 2/3;
+  background-image: url(../img/carrot.png); }
+
+.morot5 {
+  grid-row: 2/3;
+  grid-column: 1/2;
+  background-image: url(../img/carrot.png); }
