Ändrade så att länkarna blir svarta om man trycker på dem istället för när man hoverar över dem eftersom detta är mobilversionen

--- a/Rotfrukt_hemsida/site/css/_info.css.scss
+++ b/Rotfrukt_hemsida/site/css/_info.css.scss
@@ -53,7 +53,7 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-.navigation a:hover{
+.navigation a:active{
     color:black;
 }
 
