Gjorde lite större mellanrum mellan länkarna så att det inte är så lätt att råka trycka på fel

--- a/Rotfrukt_hemsida/site/css/_info.css.scss
+++ b/Rotfrukt_hemsida/site/css/_info.css.scss
@@ -53,6 +53,14 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+.navigation .info a{
+    margin-left: -20px;
+}
+
+.navigation .odlingstips a{
+    margin-right: -20px;
+}
+
 .navigation a:active{
     color:black;
 }
