--- a/Rotfrukt_hemsida/site/recept.html.erb
+++ b/Rotfrukt_hemsida/site/recept.html.erb
@@ -45,7 +45,7 @@
         </div>
     </div>
     <div class="recept4">
-        <h3>Ugnsbakad potatis</h3>
+        <h3>Bakad potatis</h3>
         <div class="morotter">
             <div class="morot1"></div>
             <div class="morot2"></div>
