--- a/Rotfrukt_hemsida/site/css/_recept.css.scss
+++ b/Rotfrukt_hemsida/site/css/_recept.css.scss
@@ -1,3 +1,4 @@
+// RECEPTLISTA
 .receptlista{
     grid-row: 3/8;
     grid-column: 1/6;
@@ -8,6 +9,7 @@
 
 .receptlista h3{
     margin-left: 5px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .recept1{
