--- a/Rotfrukt_hemsida/site/info.html.erb
+++ b/Rotfrukt_hemsida/site/info.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div class="navigation">
-    <div class="info">
+    <div class="info_active">
         <a href="info.html">Info</a>
     </div>
 
