Lade till beskrivingar

--- a/Rotfrukt_hemsida/site/css/_info.css.scss
+++ b/Rotfrukt_hemsida/site/css/_info.css.scss
@@ -1,3 +1,4 @@
+// RUBRIK & NAV
 .titel{
     grid-row: 1/2;
     grid-column: 1/6;
@@ -109,6 +110,7 @@
     color:black;
 }
 
+// FAKTATEXT & BILDER
 .text{
     grid-column: 1/4;
     grid-row: 3/8;
