--- a/Rotfrukt_hemsida/site/public/css/main.css
+++ b/Rotfrukt_hemsida/site/public/css/main.css
@@ -491,7 +491,8 @@ header .info {
   margin-right: 10px; }
 
 .text p {
-  font-family: 'PT Serif', serif; }
+  font-family: 'PT Serif', serif;
+  margin: 0px; }
 
 .bilder {
   grid-column: 4/6;
@@ -605,3 +606,56 @@ header .info {
   grid-row: 2/3;
   grid-column: 1/2;
   background-image: url(../img/carrot.png); }
+
+.tips {
+  grid-row: 3/8;
+  grid-column: 1/6;
+  grid-template-rows: repeat(10, 1fr);
+  grid-template-columns: repeat(5, 1fr);
+  display: grid; }
+
+.tips .typ_av_jord {
+  grid-row: 1/5;
+  grid-column: 1/6; }
+
+.tips .typ_av_jord h3 {
+  grid-row: 1/2;
+  grid-column: 1/6;
+  text-decoration: underline;
+  margin-top: 10px;
+  margin-bottom: 0px;
+  margin-left: 5px;
+  margin-right: 0px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+
+.tips .typ_av_jord p {
+  font-family: 'PT Serif', serif;
+  grid-row: 2/5;
+  grid-column: 1/6;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 5px;
+  margin-right: 5px; }
+
+.tips .bevattning {
+  grid-row: 6/11;
+  grid-column: 1/6; }
+
+.tips .bevattning h3 {
+  grid-row: 6/7;
+  grid-column: 1/6;
+  text-decoration: underline;
+  margin-top: 10px;
+  margin-bottom: 0px;
+  margin-left: 5px;
+  margin-right: 0px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+
+.tips .bevattning p {
+  font-family: 'PT Serif', serif;
+  grid-row: 7/10;
+  grid-column: 1/6;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 5px;
+  margin-right: 5px; }
