--- a/Rotfrukt_hemsida/site/css/_info.css.scss
+++ b/Rotfrukt_hemsida/site/css/_info.css.scss
@@ -132,7 +132,7 @@
 }
 
 .text p2{
-    display: block;
+    display: none;
 }
 
 .bilder{
@@ -247,7 +247,9 @@
     .text_and_pics{
         grid-column: 1/15;
         grid-row: 3/9;
-        margin-top: -15px;
+        margin-bottom: 15px;
+        margin-right: 30px;
+        margin-left: 30px;
         grid-template-columns: repeat(14, 1fr);
         grid-template-rows: repeat(6, 1fr);
         background-color: rgba(255, 255, 255, 0.685);
@@ -255,20 +257,24 @@
 
     .text{
         grid-row: 1/7;
-        grid-column: 2/10;
+        grid-column: 1/11;
         margin-top: 15px;
-        margin-left: 0px;
+        margin-left: 30px;
+        margin-right: 30px;
+        margin-bottom: 15px;
     }
 
     .text p2{
         font-family: 'PT Serif', serif;
+        display: block;
     }
 
     .bilder{
-        grid-column: 11/14;
+        grid-column: 11/15;
         grid-row: 1/7;
         margin-top: 15px;
         grid-row-gap: 20px;
+        margin-right: 30px;
     }
 
     .potatis{
