Gjorde så att menytexten blev svart om man hoverade över den

--- a/Rotfrukt_hemsida/site/css/_layout.css.scss
+++ b/Rotfrukt_hemsida/site/css/_layout.css.scss
@@ -176,4 +176,16 @@ header .info{
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
 
+    header .info p1:hover{
+        color: black;
+    }
+
+    header .info p2:hover{
+        color: black;
+    }
+
+    header .info p3:hover{
+        color: black;
+    }
+
 }
