Gjorde så att rotfruktslistan blev vit om man hoverade öven en viss text

--- a/Rotfrukt_hemsida/site/css/_index.css.scss
+++ b/Rotfrukt_hemsida/site/css/_index.css.scss
@@ -193,6 +193,14 @@
         margin-left: 20px;
     }
 
+    .rotfruktslista li:hover{
+        color: white;
+    }
+
+    .rotfruktslista a:hover{
+        color: white;
+    }
+
     // ARTIKLAR
     .artiklar{
         grid-row: 5/8;
