--- a/Rotfrukt_hemsida/site/public/css/main.css
+++ b/Rotfrukt_hemsida/site/public/css/main.css
@@ -143,7 +143,16 @@ header .info {
     text-decoration: underline;
     font-size: 20px;
     margin-top: 60px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; } }
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+
+  header .info p1:hover {
+    color: black; }
+
+  header .info p2:hover {
+    color: black; }
+
+  header .info p3:hover {
+    color: black; } }
 .artiklar {
   grid-row: 1/8;
   grid-column: 1/3;
@@ -309,6 +318,12 @@ header .info {
     grid-row: 1/6;
     margin-top: 5px;
     margin-left: 20px; }
+
+  .rotfruktslista li:hover {
+    color: white; }
+
+  .rotfruktslista a:hover {
+    color: white; }
 
   .artiklar {
     grid-row: 5/8;
@@ -502,7 +517,7 @@ header .info {
   margin: 0px; }
 
 .text p2 {
-  display: block; }
+  display: none; }
 
 .bilder {
   grid-column: 4/6;
@@ -592,25 +607,31 @@ header .info {
   .text_and_pics {
     grid-column: 1/15;
     grid-row: 3/9;
-    margin-top: -15px;
+    margin-bottom: 15px;
+    margin-right: 30px;
+    margin-left: 30px;
     grid-template-columns: repeat(14, 1fr);
     grid-template-rows: repeat(6, 1fr);
     background-color: rgba(255, 255, 255, 0.685); }
 
   .text {
     grid-row: 1/7;
-    grid-column: 2/10;
+    grid-column: 1/11;
     margin-top: 15px;
-    margin-left: 0px; }
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 15px; }
 
   .text p2 {
-    font-family: 'PT Serif', serif; }
+    font-family: 'PT Serif', serif;
+    display: block; }
 
   .bilder {
-    grid-column: 11/14;
+    grid-column: 11/15;
     grid-row: 1/7;
     margin-top: 15px;
-    grid-row-gap: 20px; }
+    grid-row-gap: 20px;
+    margin-right: 30px; }
 
   .potatis {
     margin: 0px; }
