--- a/Rotfrukt_hemsida/site/css/_recept.css.scss
+++ b/Rotfrukt_hemsida/site/css/_recept.css.scss
@@ -150,5 +150,26 @@
 
     .morotter{
         grid-column: 5/6;
+        grid-column: 5/6;
+    }
+
+    .morot1{
+        background-image: url(../img/Carrot_desktop.png);
+    }
+    
+    .morot2{
+        background-image: url(../img/Carrot_desktop.png);
+    }
+    
+    .morot3{
+        background-image: url(../img/Carrot_desktop.png);
+    }
+    
+    .morot4{
+        background-image: url(../img/Carrot_desktop.png);
+    }
+    
+    .morot5{
+        background-image: url(../img/Carrot_desktop.png);
     }
 }
