--- a/Rotfrukt_hemsida/site/css/_index.css.scss
+++ b/Rotfrukt_hemsida/site/css/_index.css.scss
@@ -225,7 +225,7 @@
         color: rgb(100, 100, 100);
         margin-right: 5px;
         margin-left: 5px;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-family: 'PT Serif', serif;
         display: block;
     }
 
