--- a/Rotfrukt_hemsida/site/public/css/main.css
+++ b/Rotfrukt_hemsida/site/public/css/main.css
@@ -350,7 +350,7 @@ header .info {
     color: #646464;
     margin-right: 5px;
     margin-left: 5px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'PT Serif', serif;
     display: block; }
 
   .artiklar h2 {
