--- a/Rotfrukt_hemsida/site/public/css/main.css
+++ b/Rotfrukt_hemsida/site/public/css/main.css
@@ -165,6 +165,7 @@ header .info {
   display: grid;
   margin-left: 5px;
   margin-right: -24px;
+  margin-top: -10px;
   grid-row-gap: 15px; }
 
 .artiklar h2 {
