--- a/Rotfrukt_hemsida/site/css/_layout.css.scss
+++ b/Rotfrukt_hemsida/site/css/_layout.css.scss
@@ -156,7 +156,7 @@ header .info{
         text-decoration: underline;
         font-size: 20px;
         margin-top: 60px;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
 
     header .info p2{
@@ -166,8 +166,7 @@ header .info{
         color: white;
         text-decoration: underline;
         font-size: 20px;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    }
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;    }
 
     header .info p3{
         grid-column: 3/4;
@@ -175,8 +174,7 @@ header .info{
         text-decoration: underline;
         font-size: 20px;
         margin-top: 60px;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    }
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;    }
 
     header .info p1:hover{
         color: black;
