--- a/Rotfrukt_hemsida/site/public/css/main.css
+++ b/Rotfrukt_hemsida/site/public/css/main.css
@@ -130,7 +130,7 @@ header .info {
     text-decoration: underline;
     font-size: 20px;
     margin-top: 60px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
 
   header .info p2 {
     grid-column: 2/3;
@@ -139,7 +139,7 @@ header .info {
     color: white;
     text-decoration: underline;
     font-size: 20px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
 
   header .info p3 {
     grid-column: 3/4;
@@ -147,7 +147,7 @@ header .info {
     text-decoration: underline;
     font-size: 20px;
     margin-top: 60px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; }
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
 
   header .info p1:hover {
     color: black; }
